5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1577_1332.log
== TEST (2019-04-11 18:18:20) 
-- CODE:
aresta = A=3/2(3a**2)
area = 5cm
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 1
    aresta = A=3/2(3a**2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:19:22) 
-- CODE:
aresta = 3/2(3**2)
area = 5cm
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 5cm
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:19:31) 
-- CODE:
aresta = 3/2(3**2)
area = 5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = 3/2(3**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:19:34) 
-- CODE:
aresta = 3/2(3**2)
area = 5
 
print(round(area, 4))
-- EXECUTION TIME:
0.164917
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1332/main.py", line 1, in <module>
    aresta = 3/2(3**2)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:19:38) 
-- CODE:
aresta = 3/2(3**2)
area = 5
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    aresta = 3/2(3**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:22:14) 
-- CODE:
aresta = 3/2(3a)**2
area = 5
print(round(area 5, 4))
-- ERROR:
File "XXXX", line 1
    aresta = 3/2(3a)**2
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:22:19) 
-- CODE:
aresta = 3/2(3a)**2
area = 5
print(round(area 5, 4))
-- EXECUTION TIME:
0.209551
-- ERROR:
  File "/home/codebench/codes/1577/1332/main.py", line 1
    aresta = 3/2(3a)**2
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:25:46) 
-- CODE:
area = 3/2*(3*aresta)**0.5
aresta = 5

print(round(area 5, 4))
-- ERROR:
File "XXXX", line 4
    print(round(area 5, 4))
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:25:54) 
-- CODE:
area = 3/2*(3*aresta)**0.5
aresta = 5

print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    area = 3/2*(3*aresta)**0.5
NameError: name 'aresta' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:26:25) 
-- CODE:
aresta = 5

area = 3/2*(3*aresta)**0.5

print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:26:36) 
-- CODE:
aresta = 5

area = 3/2*(3*aresta)**0.5

print(round(area, 4))
-- EXECUTION TIME:
0.204409
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:26:53) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta)**0.5
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:28:17) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta)**0.5
exagono= (a)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    exagono= (a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:29:23) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta)**0.5
print(round(area, 4))
-- EXECUTION TIME:
0.177344
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:29:24) 
-- CODE:
aresta = 5
area = 3/2*(3*aresta)**0.5
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:30:18) 
-- CODE:
aresta = 5
area = (3/2)*(3*aresta)**0.5
print(round(area, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:32:27) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:33:58) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*aresta**2

print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:34:02) 
-- CODE:
aresta = 5
area = (3/2)*(3**0.5)*aresta**2

print(round(area, 4))
-- EXECUTION TIME:
0.130129
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
